# rust-synth

./: Cargo.toml  README.md
src/: gui.rs  lib.rs  main.rs  plugin.json
src/audio/: filters.rs  mod.rs  note.rs  oscillator.rs  wavetable.rs
src/midi/: mod.rs
src/structs/: envelope.rs  mod.rs  note.rs
