[package]
name = "rust-synth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rust_synth"

[[bin]]
name = "rust-synth-standalone"
path = "src/main.rs"

[dependencies]
vst3-sys = "0.1"
vst3-com = "0.1"
vst3-host = "0.1"
vst3-plugin = { version = "0.1", features = ["host-bundle"] }
cpal = "0.15"
midir = "0.9"
egui = "0.26"
eframe = "0.26"
ctrlc = "3.4"

[workspace]
members = ["."]

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
